--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
         "preact-jsx-chai": "^3.0.0",
         "preact-markup": "^2.0.0",
         "preact-render-to-string": "^5.1.4",
-        "preact-router": "^3.2.1"
+        "preact-router": "^3.2.1",
+        "styled-components": "^5.2.0"
     },
     "devDependencies": {
         "@teamsupercell/typings-for-css-modules-loader": "^2.2.0",
         "@types/enzyme": "^3.10.5",
         "@types/jest": "^26.0.8",
+        "@types/styled-components": "^5.1.4",
         "@types/webpack-env": "^1.15.1",
         "@typescript-eslint/eslint-plugin": "^2.25.0",
         "@typescript-eslint/parser": "^2.25.0",
@@ -37,10 +39,10 @@
         "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-react": "^7.19.0",
         "eslint-plugin-react-hooks": "^3.0.0",
-        "lint-staged": "^10.0.7",
+        "lint-staged": "^10.5.0",
         "preact-cli": "^3.0.0",
         "prettier": "^1.19.1",
         "sirv-cli": "^1.0.0-next.3",
-        "typescript": "^3.7.5"
+        "typescript": "^3.9.0"
     }
 }
