--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "version": "0.0.0",
     "license": "MIT",
     "scripts": {
-        "build": "preact build",
+        "build": "preact build --dest docs",
         "serve": "sirv build --port 8080 --cors --single",
         "dev": "preact watch",
         "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
@@ -17,25 +17,29 @@
     "eslintIgnore": [
         "build/*"
     ],
+    "alias": {
+        "react": "preact/compat",
+        "readt-dom": "preact/compat",
+        "react-is": "preact/compat"
+    },
     "dependencies": {
         "preact": "^10.3.1",
         "preact-jsx-chai": "^3.0.0",
         "preact-markup": "^2.0.0",
         "preact-render-to-string": "^5.1.4",
         "preact-router": "^3.2.1",
+        "react-is": "^17.0.1",
         "styled-components": "^5.2.0"
     },
     "devDependencies": {
         "@teamsupercell/typings-for-css-modules-loader": "^2.2.0",
-        "@types/enzyme": "^3.10.5",
-        "@types/jest": "^26.0.8",
         "@types/styled-components": "^5.1.4",
         "@types/webpack-env": "^1.15.1",
         "@typescript-eslint/eslint-plugin": "^2.25.0",
         "@typescript-eslint/parser": "^2.25.0",
         "css-loader": "^3.5.3",
         "eslint": "^6.8.0",
-        "eslint-config-prettier": "^6.10.1",
+        "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-react": "^7.19.0",
         "eslint-plugin-react-hooks": "^3.0.0",
