--- a/docs/push-manifest.json
+++ b/docs/push-manifest.json
@@ -1,1 +1,1 @@
-{"/":{"bundle.003cc.css":{"type":"style","weight":1},"bundle.27355.esm.js":{"type":"script","weight":1}}}
+{"/":{"bundle.3ad8b.css":{"type":"style","weight":1},"bundle.b8630.esm.js":{"type":"script","weight":1}}}
